tests/baselines/reference/parserClassDeclaration5.errors.txt
==== tests/cases/compiler/parserClassDeclaration5.ts (3 errors) ====
    class C extends A implements B implements C {
                                   ~~~~~~~~~~~~
!!! parserClassDeclaration5.ts(1,32): error TS1027: 'implements' clause already seen.
                    ~
!!! parserClassDeclaration5.ts(1,17): error TS2095: Cannot find name 'A'.
                                 ~
!!! parserClassDeclaration5.ts(1,30): error TS2095: Cannot find name 'B'.
    }